fixtures/errors/json_parse_invalid_number_trailing_dot.js
try {
  JSON.parse("1.");
  console.log("no-throw");
} catch (e) {
  console.log("caught-name:", e.name);
}
